// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тест компонента Circle без буквы 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
         
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  />
</div>
`;

exports[`Тест компонента Circle в состоянии changing 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
         
        changing"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  />
</div>
`;

exports[`Тест компонента Circle в состоянии default 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
         
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  />
</div>
`;

exports[`Тест компонента Circle в состоянии modified 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
         
        modified"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  />
</div>
`;

exports[`Тест компонента Circle с head 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        string"
    data-testid="head"
  >
    head
  </div>
  <div
    className="circle  
         
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  />
</div>
`;

exports[`Тест компонента Circle с index 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
         
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    1
  </p>
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail60 
        element"
    data-testid="tail"
  />
</div>
`;

exports[`Тест компонента Circle с react-элементом в head 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  >
    <div
      className="content "
    >
      <div
        className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
        data-testid="head"
      />
      <div
        className="circle  
         
        default"
        data-testid="circle-circle"
      >
        <p
          className="text text_type_circle text_color_input letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
        data-testid="tail"
      />
    </div>
  </div>
  <div
    className="circle  
         
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  />
</div>
`;

exports[`Тест компонента Circle с react-элементом в tail 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
         
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  >
    <div
      className="content "
    >
      <div
        className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
        data-testid="head"
      />
      <div
        className="circle  
         
        default"
        data-testid="circle-circle"
      >
        <p
          className="text text_type_circle text_color_input letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
        data-testid="tail"
      />
    </div>
  </div>
</div>
`;

exports[`Тест компонента Circle с tail 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
         
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        string"
    data-testid="tail"
  >
    tail
  </div>
</div>
`;

exports[`Тест компонента Circle с буквами 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
         
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      ABC
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  />
</div>
`;

exports[`Тест компонента Circle с пропом isSmall ===  true 1`] = `
<div
  className="content "
>
  <div
    className="text text_type_input text_color_input mb-4 
        absolute 
        head 
        element"
    data-testid="head"
  />
  <div
    className="circle  
        small 
        default"
    data-testid="circle-circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4
        absolute 
        tail30 
        element"
    data-testid="tail"
  />
</div>
`;
